[package]
name = "yajlish"
version = "0.1.1"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
license = "Apache-2.0"
description = "An event-based json parser with json-ndjson parser"
repository = "https://github.com/boydjohnson/yajlish"
readme = "README.md"
keywords = ["json", "parser", "event-based"]
categories = ["parsing"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
lazy_static = "^1.0"
nom = { version = "6.0.0-alpha1", features = ["regexp"] }

[dev-dependencies]
pretty_assertions = "^0.6"
proptest = "^0.10"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"



[features]
ndjson = []
