[package]
name = "yajlish"
version = "0.4.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
license = "Apache-2.0"
description = "An event-based json parser with json-ndjson parser"
repository = "https://github.com/boydjohnson/yajlish"
readme = "README.md"
keywords = ["json", "parser", "event-based"]
categories = ["parsing"]
edition = "2018"
documentation = "https://docs.rs/yajlish"

[package.metadata.docs.rs]
all-features = true

[dependencies]
nom = { version = "7.1" }
lalrpop-util = { version = "0.19", optional = true }
json-tools = "1.1"

[dev-dependencies]
pretty_assertions = "^0.6"
json-tools = "1.1"
proptest = "1.0"

[build-dependencies]
lalrpop = { version = "0.19", optional = true }


[features]
ndjson = ["lalrpop", "lalrpop-util"]
